# uuv-ros

./: .gitignore  LICENSE  README.md
uuv_control/: CMakeLists.txt  package.xml  setup.py
uuv_control/config/: bluerov2.yaml  rexrov2.yaml
uuv_control/scripts/: uuv_controller.py
uuv_control/src/uuv_control/: controllers.py  mimo_nl_pid.py
uuv_description/: CMakeLists.txt  package.xml
uuv_description/config/: manipulator_pid.yaml
uuv_description/launch/: spawn.launch
uuv_description/urdf/: bluerov2_description.urdf  bluerov2_description.urdf.xacro  rexrov2_description.urdf  rexrov2_description.urdf.xacro  rexrov_description.urdf  rexrov_description.urdf.xacro
uuv_description/urdf/manipulator/: manipulator.urdf.xacro
uuv_description/urdf/manipulator/end_effectors/: standard_jaws.urdf.xacro
uuv_estimation/: CMakeLists.txt  package.xml  setup.py
uuv_estimation/config/: kalman_config.yaml
uuv_estimation/launch/: estimator.launch
uuv_estimation/src/uuv_estimation/: estimator.py  kalman_base.py  uuv_kalman.py
uuv_gazebo/: CMakeLists.txt  package.xml
uuv_gazebo/launch/: ocean_world.launch  olympic_pool.launch  semi_olympic_pool.launch
uuv_gazebo/models/olympic_pool/: model.config  olympic_pool.blend  olympic_pool.dae
uuv_gazebo/models/semi_olympic_pool/: model.config  pool.blend  semi_olympic_pool.dae
uuv_gazebo/src/: uuv_gazebo_plugin.cpp
uuv_gazebo/worlds/: ocean.world  olympic_pool.world  semi_olympic_pool.world
uuv_model/: CMakeLists.txt  package.xml  setup.py
uuv_model/config/: bluerov2.yaml  rexrov2.yaml
uuv_model/scripts/: test.py  uuv.py  uuv_model_gazebo.py  uuv_model_standalone.py
uuv_model/src/uuv_model/: utils.py
uuv_msgs/: CMakeLists.txt  package.xml
uuv_msgs/msg/: ControlSignal.msg  ReferenceSignal.msg  States.msg
uuv_navigation/: CMakeLists.txt  package.xml
uuv_navigation/config/: demo_waypoints.yaml  semi_olympic_waypoints.yaml
uuv_navigation/scripts/: trajectory_plotter.py  waypoint_guidance.py
uuv_sensors/uuv_sensor_msgs/: CMakeLists.txt  package.xml
uuv_sensors/uuv_sensor_msgs/msg/: Camera.msg  DVL.msg  IMU.msg  Pressure.msg  Sonar.msg
uuv_sensors/uuv_sensors/: CMakeLists.txt  package.xml
uuv_sensors/uuv_sensors/config/: bluerov2_sensors.yaml
uuv_sensors/uuv_sensors/scripts/: uuv_sensors.py
