<?xml version="1.0"?>
<package format="2">

  <name>uuv_description</name>
  <version>0.1.0</version>
  <description>The uuv_description package</description>

  <maintainer email="ibrahim17kose@gmail.com">İbrahim Köse</maintainer>
  <author email="ibrahim17kose@gmail.com">İbrahim Köse</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
