<?xml version="1.0"?>
<package format="2">

  <name>uuv_gazebo</name>
  <version>0.1.0</version>
  <description>The uuv_gazebo package</description>

  <maintainer email="ibrahim17kose@gmail.com">İbrahim Köse</maintainer>
  <author email="ibrahim17kose@gmail.com">İbrahim Köse</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
