<?xml version="1.0"?>
<package format="2">

  <name>uuv_model</name>
  <version>0.1.0</version>
  <description>The uuv_model package</description>

  <maintainer email="ibrahim17kose@gmail.com">İbrahim Köse</maintainer>
  <author email="ibrahim17kose@gmail.com">İbrahim Köse</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
