<?xml version="1.0"?>
<package format="2">

  <name>uuv_msgs</name>
  <version>0.1.0</version>
  <description>The uuv_msgs package</description>

  <maintainer email="ibrahim17kose@gmail.com">İbrahim Köse</maintainer>
  <author email="ibrahim17kose@gmail.com">İbrahim Köse</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
